--- a/latex/classAbstractUser.tex
+++ b/latex/classAbstractUser.tex
@@ -103,7 +103,7 @@ Broadcasts a message to all chat rooms.
 \end{DoxyParams}
 
 
-Implemented in \mbox{\hyperlink{classUser_a44236724bf752d8f092a7c65ab460030}{User}}, \mbox{\hyperlink{classAnimalLover_a8b5971a2813fa74b03a8a99bd5f98c25}{Animal\+Lover}}, \mbox{\hyperlink{classChataholic_a72018911098c838321a9f3674c69db3f}{Chataholic}}, and \mbox{\hyperlink{classDecorator_a5e7d61818c5c2718bf69290879b70d92}{Decorator}}.
+Implemented in \mbox{\hyperlink{classUser_a44236724bf752d8f092a7c65ab460030}{User}}, \mbox{\hyperlink{classAnimalLover_a8b5971a2813fa74b03a8a99bd5f98c25}{Animal\+Lover}}, \mbox{\hyperlink{classChataholic_a72018911098c838321a9f3674c69db3f}{Chataholic}}, \mbox{\hyperlink{classDecorator_a5e7d61818c5c2718bf69290879b70d92}{Decorator}}, \mbox{\hyperlink{classDogWhisperer_af626dfcb765fb4307d7613c80e0f385a}{Dog\+Whisperer}}, and \mbox{\hyperlink{classVIPUser_aeee77c1ed794834fafbd9d5db3883395}{VIPUser}}.
 
 \Hypertarget{classAbstractUser_ad693a2255a44a2f91df5e1964180d6f5}\label{classAbstractUser_ad693a2255a44a2f91df5e1964180d6f5} 
 \index{AbstractUser@{AbstractUser}!executeAll@{executeAll}}
@@ -134,7 +134,7 @@ Returns the user\textquotesingle{}s name or decorated tag.
 \end{DoxyReturn}
 
 
-Implemented in \mbox{\hyperlink{classAnimalLover_a3d269de3bc1a84c809ac28d873c4fad0}{Animal\+Lover}}, \mbox{\hyperlink{classChataholic_a8267081a3e15824edae5deae80bd37ff}{Chataholic}}, \mbox{\hyperlink{classDecorator_a6c75937a5eb65056b7a3197bb1361401}{Decorator}}, \mbox{\hyperlink{classUser_ad7725794319d8587c2a69303a78a2e2b}{User}}, \mbox{\hyperlink{classAlice_a4adfb64b06cb1341de1f5a206e79ef89}{Alice}}, \mbox{\hyperlink{classBob_aab4e0868ea645fff4b5356be24606037}{Bob}}, and \mbox{\hyperlink{classCharlie_a67c67b28b1e40bba806bcbb01ccd47ae}{Charlie}}.
+Implemented in \mbox{\hyperlink{classAnimalLover_a3d269de3bc1a84c809ac28d873c4fad0}{Animal\+Lover}}, \mbox{\hyperlink{classChataholic_a8267081a3e15824edae5deae80bd37ff}{Chataholic}}, \mbox{\hyperlink{classDecorator_a6c75937a5eb65056b7a3197bb1361401}{Decorator}}, \mbox{\hyperlink{classUser_ad7725794319d8587c2a69303a78a2e2b}{User}}, \mbox{\hyperlink{classAlice_a4adfb64b06cb1341de1f5a206e79ef89}{Alice}}, \mbox{\hyperlink{classBob_aab4e0868ea645fff4b5356be24606037}{Bob}}, \mbox{\hyperlink{classCharlie_a67c67b28b1e40bba806bcbb01ccd47ae}{Charlie}}, \mbox{\hyperlink{classDogWhisperer_a2a1b470f1f2f07d7c17aa2c603129e7d}{Dog\+Whisperer}}, and \mbox{\hyperlink{classVIPUser_ac581f1bb04dd3f7168c36aad009caa84}{VIPUser}}.
 
 \Hypertarget{classAbstractUser_a7483f0c8a1f24ae2710f42dfb0ead60d}\label{classAbstractUser_a7483f0c8a1f24ae2710f42dfb0ead60d} 
 \index{AbstractUser@{AbstractUser}!receive@{receive}}
@@ -157,7 +157,7 @@ Receives a message from another user in a chat room.
 \end{DoxyParams}
 
 
-Implemented in \mbox{\hyperlink{classUser_a316ac7b63f7393c9eb4a93c0e99adb43}{User}}, \mbox{\hyperlink{classAnimalLover_ae819830afae4b296873884ecde32b7e3}{Animal\+Lover}}, \mbox{\hyperlink{classChataholic_a9c2d0e540d197054b9c6402856fbd3ca}{Chataholic}}, and \mbox{\hyperlink{classDecorator_af5cad954fb35b96ce40b6001884aa278}{Decorator}}.
+Implemented in \mbox{\hyperlink{classUser_a316ac7b63f7393c9eb4a93c0e99adb43}{User}}, \mbox{\hyperlink{classAnimalLover_ae819830afae4b296873884ecde32b7e3}{Animal\+Lover}}, \mbox{\hyperlink{classChataholic_a9c2d0e540d197054b9c6402856fbd3ca}{Chataholic}}, \mbox{\hyperlink{classDecorator_af5cad954fb35b96ce40b6001884aa278}{Decorator}}, \mbox{\hyperlink{classDogWhisperer_a12445fba76cc7f171c0a2a90e52c4b91}{Dog\+Whisperer}}, and \mbox{\hyperlink{classVIPUser_ac45bdc82186b060f1be5c02f2c5d313b}{VIPUser}}.
 
 \Hypertarget{classAbstractUser_a4b2298639b4bbdf5f96961a2307d6075}\label{classAbstractUser_a4b2298639b4bbdf5f96961a2307d6075} 
 \index{AbstractUser@{AbstractUser}!removeChatRoom@{removeChatRoom}}
@@ -214,7 +214,7 @@ Sends a message to a chat room.
 \end{DoxyParams}
 
 
-Implemented in \mbox{\hyperlink{classUser_abced2de4c95d498cfa10505b129e8c70}{User}}, \mbox{\hyperlink{classAnimalLover_ac7befda2acf8941eb209c391cf1cea4a}{Animal\+Lover}}, \mbox{\hyperlink{classChataholic_ab346e33429bbeb2ec5ff07f47dce1196}{Chataholic}}, and \mbox{\hyperlink{classDecorator_aec2d43c3718ce6810dec2caaafefb620}{Decorator}}.
+Implemented in \mbox{\hyperlink{classUser_abced2de4c95d498cfa10505b129e8c70}{User}}, \mbox{\hyperlink{classAnimalLover_ac7befda2acf8941eb209c391cf1cea4a}{Animal\+Lover}}, \mbox{\hyperlink{classChataholic_ab346e33429bbeb2ec5ff07f47dce1196}{Chataholic}}, \mbox{\hyperlink{classDecorator_aec2d43c3718ce6810dec2caaafefb620}{Decorator}}, \mbox{\hyperlink{classDogWhisperer_a10ed2b52d12dc819834826bb0afe43ba}{Dog\+Whisperer}}, and \mbox{\hyperlink{classVIPUser_a825603c35fe7b2d832de81b3f6587d3a}{VIPUser}}.
 
 
 
