--- a/latex/classDecorator.tex
+++ b/latex/classDecorator.tex
@@ -143,7 +143,7 @@ Implements \mbox{\hyperlink{classAbstractUser_aa2556508b0253455cb831e0f962e1871}
 
 
 
-Reimplemented in \mbox{\hyperlink{classAnimalLover_a8b5971a2813fa74b03a8a99bd5f98c25}{Animal\+Lover}}, and \mbox{\hyperlink{classChataholic_a72018911098c838321a9f3674c69db3f}{Chataholic}}.
+Reimplemented in \mbox{\hyperlink{classAnimalLover_a8b5971a2813fa74b03a8a99bd5f98c25}{Animal\+Lover}}, \mbox{\hyperlink{classChataholic_a72018911098c838321a9f3674c69db3f}{Chataholic}}, \mbox{\hyperlink{classDogWhisperer_af626dfcb765fb4307d7613c80e0f385a}{Dog\+Whisperer}}, and \mbox{\hyperlink{classVIPUser_aeee77c1ed794834fafbd9d5db3883395}{VIPUser}}.
 
 \Hypertarget{classDecorator_aab3158c80e18e549d44892dd7fa0d69d}\label{classDecorator_aab3158c80e18e549d44892dd7fa0d69d} 
 \index{Decorator@{Decorator}!executeAll@{executeAll}}
@@ -178,7 +178,7 @@ Implements \mbox{\hyperlink{classAbstractUser_a3d2e0c6634545bcd3d3c0f1c9c158158}
 
 
 
-Reimplemented in \mbox{\hyperlink{classAnimalLover_a3d269de3bc1a84c809ac28d873c4fad0}{Animal\+Lover}}, and \mbox{\hyperlink{classChataholic_a8267081a3e15824edae5deae80bd37ff}{Chataholic}}.
+Reimplemented in \mbox{\hyperlink{classAnimalLover_a3d269de3bc1a84c809ac28d873c4fad0}{Animal\+Lover}}, \mbox{\hyperlink{classChataholic_a8267081a3e15824edae5deae80bd37ff}{Chataholic}}, \mbox{\hyperlink{classDogWhisperer_a2a1b470f1f2f07d7c17aa2c603129e7d}{Dog\+Whisperer}}, and \mbox{\hyperlink{classVIPUser_ac581f1bb04dd3f7168c36aad009caa84}{VIPUser}}.
 
 \Hypertarget{classDecorator_af5cad954fb35b96ce40b6001884aa278}\label{classDecorator_af5cad954fb35b96ce40b6001884aa278} 
 \index{Decorator@{Decorator}!receive@{receive}}
@@ -205,7 +205,7 @@ Implements \mbox{\hyperlink{classAbstractUser_a7483f0c8a1f24ae2710f42dfb0ead60d}
 
 
 
-Reimplemented in \mbox{\hyperlink{classAnimalLover_ae819830afae4b296873884ecde32b7e3}{Animal\+Lover}}, and \mbox{\hyperlink{classChataholic_a9c2d0e540d197054b9c6402856fbd3ca}{Chataholic}}.
+Reimplemented in \mbox{\hyperlink{classAnimalLover_ae819830afae4b296873884ecde32b7e3}{Animal\+Lover}}, \mbox{\hyperlink{classChataholic_a9c2d0e540d197054b9c6402856fbd3ca}{Chataholic}}, \mbox{\hyperlink{classDogWhisperer_a12445fba76cc7f171c0a2a90e52c4b91}{Dog\+Whisperer}}, and \mbox{\hyperlink{classVIPUser_ac45bdc82186b060f1be5c02f2c5d313b}{VIPUser}}.
 
 \Hypertarget{classDecorator_a9c499a5ed2aacee73db20eb5d3fe2ade}\label{classDecorator_a9c499a5ed2aacee73db20eb5d3fe2ade} 
 \index{Decorator@{Decorator}!removeChatRoom@{removeChatRoom}}
@@ -266,7 +266,7 @@ Implements \mbox{\hyperlink{classAbstractUser_a0c0efb11e62cfa87448ac1360519bc60}
 
 
 
-Reimplemented in \mbox{\hyperlink{classAnimalLover_ac7befda2acf8941eb209c391cf1cea4a}{Animal\+Lover}}, and \mbox{\hyperlink{classChataholic_ab346e33429bbeb2ec5ff07f47dce1196}{Chataholic}}.
+Reimplemented in \mbox{\hyperlink{classAnimalLover_ac7befda2acf8941eb209c391cf1cea4a}{Animal\+Lover}}, \mbox{\hyperlink{classChataholic_ab346e33429bbeb2ec5ff07f47dce1196}{Chataholic}}, \mbox{\hyperlink{classDogWhisperer_a10ed2b52d12dc819834826bb0afe43ba}{Dog\+Whisperer}}, and \mbox{\hyperlink{classVIPUser_a825603c35fe7b2d832de81b3f6587d3a}{VIPUser}}.
 
 
 
