--- a/latex/files.tex
+++ b/latex/files.tex
@@ -11,9 +11,11 @@ Here is a list of all documented files with brief descriptions\+:\begin{DoxyComp
 \item\contentsline{section}{\mbox{\hyperlink{Decorator_8cpp}{Decorator.\+cpp}} \\*Implementation of the \doxylink{classDecorator}{Decorator} base class for \doxylink{classAbstractUser}{Abstract\+User} extension }{\pageref{Decorator_8cpp}}{}
 \item\contentsline{section}{\mbox{\hyperlink{Decorator_8h}{Decorator.\+h}} \\*Abstract decorator class for extending \doxylink{classAbstractUser}{Abstract\+User} functionality at runtime }{\pageref{Decorator_8h}}{}
 \item\contentsline{section}{\mbox{\hyperlink{Dogorithm_8h}{Dogorithm.\+h}} \\*Concrete implementation of \doxylink{classChatRoom}{Chat\+Room} representing the \doxylink{classDogorithm}{Dogorithm} chat room }{\pageref{Dogorithm_8h}}{}
+\item\contentsline{section}{\mbox{\hyperlink{DogWhisperer_8h}{Dog\+Whisperer.\+h}} \\*Concrete decorator that adds dog whisperer role to users with green tag }{\pageref{DogWhisperer_8h}}{}
 \item\contentsline{section}{\mbox{\hyperlink{Iterator_8h}{Iterator.\+h}} \\*Abstract base class template for iterator pattern implementation }{\pageref{Iterator_8h}}{}
 \item\contentsline{section}{\mbox{\hyperlink{LogMessageCommand_8h}{Log\+Message\+Command.\+h}} \\*\doxylink{classCommand}{Command} implementation for logging messages to chat room history }{\pageref{LogMessageCommand_8h}}{}
 \item\contentsline{section}{\mbox{\hyperlink{SendMessageCommand_8h}{Send\+Message\+Command.\+h}} \\*\doxylink{classCommand}{Command} implementation for sending messages through the chat room mediator }{\pageref{SendMessageCommand_8h}}{}
 \item\contentsline{section}{\mbox{\hyperlink{User_8h}{User.\+h}} \\*Concrete implementation of \doxylink{classAbstractUser}{Abstract\+User} with command pattern integration }{\pageref{User_8h}}{}
 \item\contentsline{section}{\mbox{\hyperlink{VectorIterator_8h}{Vector\+Iterator.\+h}} \\*Template iterator that will be used by the other classes to itterate over users and messages }{\pageref{VectorIterator_8h}}{}
+\item\contentsline{section}{\mbox{\hyperlink{VIPUser_8h}{VIPUser.\+h}} \\*Concrete decorator that adds VIP privileges to users with priority messaging }{\pageref{VIPUser_8h}}{}
 \end{DoxyCompactList}
