--- a/latex/hierarchy.tex
+++ b/latex/hierarchy.tex
@@ -6,6 +6,8 @@ This inheritance list is sorted roughly, but not completely, alphabetically\+:\b
 \begin{DoxyCompactList}
 \item \contentsline{section}{Animal\+Lover}{\pageref{classAnimalLover}}{}
 \item \contentsline{section}{Chataholic}{\pageref{classChataholic}}{}
+\item \contentsline{section}{Dog\+Whisperer}{\pageref{classDogWhisperer}}{}
+\item \contentsline{section}{VIPUser}{\pageref{classVIPUser}}{}
 \end{DoxyCompactList}
 \item \contentsline{section}{User}{\pageref{classUser}}{}
 \begin{DoxyCompactList}
