--- a/latex/refman.tex
+++ b/latex/refman.tex
@@ -226,11 +226,13 @@
 \input{classCtrlCat}
 \input{classDecorator}
 \input{classDogorithm}
+\input{classDogWhisperer}
 \input{classIterator}
 \input{classLogMessageCommand}
 \input{classSendMessageCommand}
 \input{classUser}
 \input{classVectorIterator}
+\input{classVIPUser}
 \chapter{File Documentation}
 \input{AbstractUser_8h}
 \input{AbstractUser_8h_source}
@@ -253,6 +255,8 @@
 \input{Decorator_8h_source}
 \input{Dogorithm_8h}
 \input{Dogorithm_8h_source}
+\input{DogWhisperer_8h}
+\input{DogWhisperer_8h_source}
 \input{Iterator_8h}
 \input{Iterator_8h_source}
 \input{LogMessageCommand_8h}
@@ -263,6 +267,8 @@
 \input{User_8h_source}
 \input{VectorIterator_8h}
 \input{VectorIterator_8h_source}
+\input{VIPUser_8h}
+\input{VIPUser_8h_source}
 %--- End generated contents ---
 % Index
   \backmatter
