--- a/latex/annotated.tex
+++ b/latex/annotated.tex
@@ -13,9 +13,11 @@ Here are the classes, structs, unions and interfaces with brief descriptions\+:\
 \item\contentsline{section}{\mbox{\hyperlink{classCtrlCat}{Ctrl\+Cat}} \\*Concrete chat room implementation for Ctrl\+Cat-\/themed discussions }{\pageref{classCtrlCat}}{}
 \item\contentsline{section}{\mbox{\hyperlink{classDecorator}{Decorator}} \\*Base decorator for dynamically adding responsibilities to \doxylink{classAbstractUser}{Abstract\+User} objects }{\pageref{classDecorator}}{}
 \item\contentsline{section}{\mbox{\hyperlink{classDogorithm}{Dogorithm}} \\*Concrete chat room implementation for Dogorithm-\/themed discussions }{\pageref{classDogorithm}}{}
+\item\contentsline{section}{\mbox{\hyperlink{classDogWhisperer}{Dog\+Whisperer}} \\*Concrete decorator that adds a green "{}\+Dog Whisperer"{} tag to user names }{\pageref{classDogWhisperer}}{}
 \item\contentsline{section}{\mbox{\hyperlink{classIterator}{Iterator$<$ T $>$}} \\*Abstract iterator interface for traversing collections }{\pageref{classIterator}}{}
 \item\contentsline{section}{\mbox{\hyperlink{classLogMessageCommand}{Log\+Message\+Command}} \\*Concrete command that logs messages to chat room\textquotesingle{}s persistent history }{\pageref{classLogMessageCommand}}{}
 \item\contentsline{section}{\mbox{\hyperlink{classSendMessageCommand}{Send\+Message\+Command}} \\*Concrete command that sends messages to other users via the chat room mediator }{\pageref{classSendMessageCommand}}{}
 \item\contentsline{section}{\mbox{\hyperlink{classUser}{User}} \\*Concrete implementation of \doxylink{classAbstractUser}{Abstract\+User} that manages chat room memberships and command execution }{\pageref{classUser}}{}
 \item\contentsline{section}{\mbox{\hyperlink{classVectorIterator}{Vector\+Iterator$<$ T $>$}} \\*\doxylink{classIterator}{Iterator} for traversing elements in the user and message vecotrs in other classes }{\pageref{classVectorIterator}}{}
+\item\contentsline{section}{\mbox{\hyperlink{classVIPUser}{VIPUser}} \\*Concrete decorator that adds VIP status and priority messaging to users }{\pageref{classVIPUser}}{}
 \end{DoxyCompactList}
