Added destructors and doxygen updates

--- a/latex/DogWhisperer_8h_source.tex
+++ b/latex/DogWhisperer_8h_source.tex
@@ -15,15 +15,17 @@
 \DoxyCodeLine{00030\ \textcolor{keyword}{public}:}
 \DoxyCodeLine{00035\ \ \ \ \ \mbox{\hyperlink{classDogWhisperer}{DogWhisperer}}(\mbox{\hyperlink{classAbstractUser}{AbstractUser}}*\ user);}
 \DoxyCodeLine{00036\ }
-\DoxyCodeLine{00041\ \ \ \ \ \textcolor{keyword}{virtual}\ \textcolor{keywordtype}{string}\ \mbox{\hyperlink{classDogWhisperer_a2a1b470f1f2f07d7c17aa2c603129e7d}{print}}()\ \textcolor{keyword}{override};}
-\DoxyCodeLine{00042\ }
-\DoxyCodeLine{00048\ \ \ \ \ \textcolor{keyword}{virtual}\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classDogWhisperer_a10ed2b52d12dc819834826bb0afe43ba}{send}}(\textcolor{keywordtype}{string}\ message,\ \mbox{\hyperlink{classChatRoom}{ChatRoom}}*\ room)\ \textcolor{keyword}{override};}
-\DoxyCodeLine{00049\ }
-\DoxyCodeLine{00054\ \ \ \ \ \textcolor{keyword}{virtual}\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classDogWhisperer_af626dfcb765fb4307d7613c80e0f385a}{broadcast}}(\textcolor{keywordtype}{string}\ message)\ \textcolor{keyword}{override};}
-\DoxyCodeLine{00055\ }
-\DoxyCodeLine{00062\ \ \ \ \ \textcolor{keyword}{virtual}\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classDogWhisperer_a12445fba76cc7f171c0a2a90e52c4b91}{receive}}(\textcolor{keywordtype}{string}\ message,\ \mbox{\hyperlink{classAbstractUser}{AbstractUser}}*\ fromUser,\ \mbox{\hyperlink{classChatRoom}{ChatRoom}}*\ room)\ \textcolor{keyword}{override};}
-\DoxyCodeLine{00063\ \};}
-\DoxyCodeLine{00064\ }
-\DoxyCodeLine{00065\ \textcolor{preprocessor}{\#endif}}
+\DoxyCodeLine{00040\ \ \ \ \ \textcolor{keyword}{virtual}\ \mbox{\hyperlink{classDogWhisperer_a15e8e360a0c9199500f26c5ab0f594a2}{\string~DogWhisperer}}()\{\};}
+\DoxyCodeLine{00041\ }
+\DoxyCodeLine{00046\ \ \ \ \ \textcolor{keyword}{virtual}\ \textcolor{keywordtype}{string}\ \mbox{\hyperlink{classDogWhisperer_a2a1b470f1f2f07d7c17aa2c603129e7d}{print}}()\ \textcolor{keyword}{override};}
+\DoxyCodeLine{00047\ }
+\DoxyCodeLine{00053\ \ \ \ \ \textcolor{keyword}{virtual}\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classDogWhisperer_a10ed2b52d12dc819834826bb0afe43ba}{send}}(\textcolor{keywordtype}{string}\ message,\ \mbox{\hyperlink{classChatRoom}{ChatRoom}}*\ room)\ \textcolor{keyword}{override};}
+\DoxyCodeLine{00054\ }
+\DoxyCodeLine{00059\ \ \ \ \ \textcolor{keyword}{virtual}\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classDogWhisperer_af626dfcb765fb4307d7613c80e0f385a}{broadcast}}(\textcolor{keywordtype}{string}\ message)\ \textcolor{keyword}{override};}
+\DoxyCodeLine{00060\ }
+\DoxyCodeLine{00067\ \ \ \ \ \textcolor{keyword}{virtual}\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{classDogWhisperer_a12445fba76cc7f171c0a2a90e52c4b91}{receive}}(\textcolor{keywordtype}{string}\ message,\ \mbox{\hyperlink{classAbstractUser}{AbstractUser}}*\ fromUser,\ \mbox{\hyperlink{classChatRoom}{ChatRoom}}*\ room)\ \textcolor{keyword}{override};}
+\DoxyCodeLine{00068\ \};}
+\DoxyCodeLine{00069\ }
+\DoxyCodeLine{00070\ \textcolor{preprocessor}{\#endif}}
 
 \end{DoxyCode}
