--- a/latex/classDogWhisperer.tex
+++ b/latex/classDogWhisperer.tex
@@ -22,6 +22,9 @@ Collaboration diagram for Dog\+Whisperer\+:
 \item 
 \mbox{\hyperlink{classDogWhisperer_af609ea347f38281a3a53cc2c47733d90}{Dog\+Whisperer}} (\mbox{\hyperlink{classAbstractUser}{Abstract\+User}} \texorpdfstring{$\ast$}{*}user)
 \begin{DoxyCompactList}\small\item\em Constructs a \doxylink{classDogWhisperer}{Dog\+Whisperer} decorator wrapping the given user. \end{DoxyCompactList}\item 
+\Hypertarget{classDogWhisperer_a15e8e360a0c9199500f26c5ab0f594a2}\label{classDogWhisperer_a15e8e360a0c9199500f26c5ab0f594a2} 
+virtual {\bfseries \texorpdfstring{$\sim$}{\string~}\+Dog\+Whisperer} ()
+\begin{DoxyCompactList}\small\item\em Destructor. \end{DoxyCompactList}\item 
 virtual string \mbox{\hyperlink{classDogWhisperer_a2a1b470f1f2f07d7c17aa2c603129e7d}{print}} () override
 \begin{DoxyCompactList}\small\item\em Returns the user\textquotesingle{}s name with green dog whisperer tag. \end{DoxyCompactList}\item 
 virtual void \mbox{\hyperlink{classDogWhisperer_a10ed2b52d12dc819834826bb0afe43ba}{send}} (string message, \mbox{\hyperlink{classChatRoom}{Chat\+Room}} \texorpdfstring{$\ast$}{*}room) override
