--- a/latex/classVIPUser.tex
+++ b/latex/classVIPUser.tex
@@ -22,6 +22,9 @@ Collaboration diagram for VIPUser\+:
 \item 
 \mbox{\hyperlink{classVIPUser_ab2cbb4d1202e7aad71ba0430163b03cb}{VIPUser}} (\mbox{\hyperlink{classAbstractUser}{Abstract\+User}} \texorpdfstring{$\ast$}{*}user)
 \begin{DoxyCompactList}\small\item\em Constructs a \doxylink{classVIPUser}{VIPUser} decorator wrapping the given user. \end{DoxyCompactList}\item 
+\Hypertarget{classVIPUser_a5388b68dd366ceaf6df1dc3f56814e5a}\label{classVIPUser_a5388b68dd366ceaf6df1dc3f56814e5a} 
+virtual {\bfseries \texorpdfstring{$\sim$}{\string~}\+VIPUser} ()
+\begin{DoxyCompactList}\small\item\em Destructor. \end{DoxyCompactList}\item 
 virtual string \mbox{\hyperlink{classVIPUser_ac581f1bb04dd3f7168c36aad009caa84}{print}} () override
 \begin{DoxyCompactList}\small\item\em Returns the user\textquotesingle{}s name with gold VIP tag. \end{DoxyCompactList}\item 
 virtual void \mbox{\hyperlink{classVIPUser_a825603c35fe7b2d832de81b3f6587d3a}{send}} (string message, \mbox{\hyperlink{classChatRoom}{Chat\+Room}} \texorpdfstring{$\ast$}{*}room) override
